Implement searching activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="search_button">Search</string>
 
     <string name="searching">Fetching forecast&#8230;</string>
+    <string name="search_failed">Unable to obtain forecast.</string>
 </resources>
